--- a/css/component.css
+++ b/css/component.css
@@ -37,11 +37,62 @@ a {
 	padding: 0 5px;
 	text-transform: uppercase;
 	font-size: 80%;
+	justify-content: space-between;
 }
 
 a:hover {
 	color: #fff;
 }
+
+a img{
+	width: 30px;
+	transition-duration: 0.2s;
+	transition-property: transform;
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-transition-duration: 0.2s;
+	transition-duration: 0.2s;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+	
+}
+
+a img:hover, .hvr-float:focus, .hvr-float:active{
+	-webkit-transform: translateY(-4px);
+	transform: translateY(-4px);
+
+}
+
+.bl-content{
+	margin: 0;
+	padding: 0;
+}
+
+.profile{
+	color: black;
+	width: 400px;
+
+}
+
+.profile p{
+	align-items: center;
+	display: flex;
+	
+}
+
+.profile p img{
+	height: 30px;
+	padding-right: 10px;
+}
+
+.vitae{
+}
+
 
 .container { height: 100%; }
 
@@ -53,6 +104,7 @@ a:hover {
 }
 
 .bl-main > section {
+	align-items: center;
 	position: absolute;
 	width: 50%;
 	height: 50%;
@@ -120,6 +172,12 @@ a:hover {
 	text-transform: uppercase;
 }
 
+
+.bl-box div{
+	display: grid;
+	justify-content: center;
+	align-items: center;
+}
 .bl-icon {
 	font-family: 'icomoon';
 	font-style: normal;
@@ -132,7 +190,8 @@ a:hover {
 }
 
 .bl-icon-gustavo{
-    color: black;
+	align-items: center;
+	color: black;
 }
 
 .bl-icon-gustavo img{
