Alterando Descricões, ajustando backgrounds, adicionando fontes offline

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10090,11 +10090,17 @@ header.masthead {
   color: #eaeaea;
   background-image: url("../assets/img/headerbg.png");
   background-repeat: no-repeat;
-  background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  display: grid;
-  justify-content: flex-end;
+  display: grid;  
+  justify-content: center;
+}
+
+@media (min-width: 1500px){
+  header.masthead{
+    background-size: 30vw;
+    background-position: left;
+  }
 }
 
 
